# jqcli

./: .gitignore  README.md  pyproject.toml
codex-skill/jqcli/: SKILL.md
codex-skill/jqcli/agents/: openai.yaml
codex-skill/jqcli/references/: api-workflows.md  troubleshooting.md
codex-skill/jqcli/scripts/: resolve_jqcli.ps1  smoke_readonly.ps1  smoke_write_compile.ps1
docs/: flask_strategy_post_manager_design.md
jqcli/: backtest_preprocess.py  cli.py  config.py
jqcli/api/: backtest.py  live.py
jqcli/commands/: auth.py  backtest.py  live.py
jqcli/web/: app.py  routes.py
jqcli/web/services/: archive_sync.py  jobs.py  posts.py  strategy_download.py
jqcli/web/static/: app.js
jqcli/web/templates/: base.html
scripts/: archive_community_posts.py  filter_community_posts.py  install_codex_skill.ps1  jqcli-login
tests/: test_config.py  test_web.py
tests/test_api/: test_backtest.py  test_live.py
tests/test_commands/: test_auth.py  test_backtest.py  test_cli.py  test_live.py
