[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jqcli"
version = "0.1.0"
description = "JoinQuant strategy and backtest management CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "Flask>=3.0",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
jqcli = "jqcli.cli:main"

[tool.setuptools.packages.find]
include = ["jqcli*"]

[tool.setuptools.package-data]
"jqcli.web" = ["static/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
